# nes_emulator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
src/: CMakeLists.txt  apu.hpp  cartridge.hpp  controller.hpp  main.cpp  memory.cpp  memory.hpp  nes.cpp  nes.hpp  oam_dma.hpp  ppu.cpp  ppu.hpp  sdl_helper.hpp  types.hpp
src/apu/: apu.cpp  apu.hpp  dsp.cpp  dsp.hpp
src/cpu/: addressing_modes.hpp  cpu.hpp  instructions.cpp  instructions.hpp
tests/: CMakeLists.txt  test_addressing_modes.cpp  test_instructions.cpp  test_misc.cpp
